# agent-document-generator

./: .env.example  .gitignore  README.ko.md  README.md  agent_card.json  debug_format.py  main.py  mcpserver.json  package.json  pyproject.toml  requirements.txt  response_output.txt  simple_markdown_test.py  simple_test.py  test_client.py  test_improved_response.py  test_markdown.py  test_markdown_working.py  test_output.txt  test_simple_improved.py  vercel.json
.claude/: settings.local.json
.well-known/: agent-card.json
api/: config.py  index.py  requirements.txt
app/: index.py
src/: __init__.py  __main__.py  config.py  models.py
src/agent/: dh_agent.py  simple_agent_executor.py
src/agent_document_generator/: __init__.py  __main__.py  agent_executor.py  config.py  document_generator.py  mcp_manager.py  models.py  prompts.py  rag_manager.py  skill_classifier.py  skill_handlers.py
src/executor/: dh_executor.py
src/mcp_client/: mcp_runner_client.py  simple_mcp_client.py
src/prompts/: document_generator.txt  general_assistant.txt  prompts.py  task_planner.txt
src/tools/: document_generator.py
src/tools/toolsets/: __init__.py  base_toolset.py  function_toolset.py
test/: integration_test.py  test_external_agent_client.py  test_mcp_only.py  test_skill_classifier.py
